gitops/matrix/element.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  labels:
    app.kubernetes.io/name: element
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: element
  template:
    metadata:
      labels:
        app.kubernetes.io/name: element
    spec:
      containers:
      - name: element
        image: ghcr.io/element-hq/element-web:v1.12.6
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          initialDelaySeconds: 60
          httpGet:
            path: /config.json
            port: http
        readinessProbe:
          httpGet:
            path: /config.json
            port: http
        resources:
          requests:
            cpu: 5m
            memory: 100Mi
          limits: {}
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config
          mountPath: /app/config.json
          subPath: element-config.json
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: config
        configMap:
          name: element-config
---
kind: Service
apiVersion: v1
metadata:
  name: element
spec:
  selector:
    app.kubernetes.io/name: element
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
