gitops/matrix/synapse.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  labels:
    app.kubernetes.io/name: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synapse
    spec:
      containers:
      - name: synapse
        image: ghcr.io/element-hq/synapse:v1.144.0
        # env:
        # - name: USER_BOT_PASSWORD
        #   value: mysupersecurepassword
        ports:
        - name: http
          containerPort: 8008
        volumeMounts:
        - name: configs
          mountPath: /data
        - name: db
          mountPath: /db
        - name: media
          mountPath: /media
        - name: tmp
          mountPath: /tmp/
        livenessProbe:
          initialDelaySeconds: 60
          httpGet:
            path: /health
            port: 8008
        readinessProbe:
          httpGet:
            path: /health
            port: 8008
        resources:
          requests:
            cpu: 5m
            memory: 100Mi
          limits: {}
        lifecycle:
          postStart:
            exec:
              command:
              - sh
              - -c
              - curl http://localhost:8008/health --retry 60 --retry-all-errors --retry-delay 1 --silent && register_new_matrix_user http://localhost:8008 -c /data/homeserver.yaml --user bot --password $USER_BOT_PASSWORD --exists-ok --no-admin --user_type bot
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      - name: litestream
        image: litestream/litestream:0.5.2
        args:
        - 'replicate'
        volumeMounts:
        - name: db
          mountPath: /db
        - name: litestream-config
          mountPath: /etc/litestream.yml
          subPath: litestream.yml
        ports:
        - name: metrics
          containerPort: 9090
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 1000
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: configs
        configMap:
          name: synapse-data
      - name: db
        persistentVolumeClaim:
          claimName: matrix
      - name: media
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: litestream-config
        configMap:
          name: litestream-config
---
kind: Service
apiVersion: v1
metadata:
  name: synapse
spec:
  selector:
    app.kubernetes.io/name: synapse
  type: ClusterIP
  ports:
    - name: http
      port: 8008
      targetPort: 8008

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
spec:
  rules:
  - host: matrix.10.0.0.21.nip.io
    http:
      paths:
      - path: /_matrix
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
      - path: /_synapse/client
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
      - path: /.well-known
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
