gitops/matrix/httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "matrix.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: matrix-synapse
      port: 8008
      weight: 1
    timeouts:
      request: 10h
    matches:
    - path:
        type: PathPrefix
        value: /_matrix
    - path:
        type: PathPrefix
        value: /_synapse
  - backendRefs:
    - group: ""
      kind: Service
      name: matrix-well-known
      port: 8010
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - group: ""
      kind: Service
      name: matrix-matrix-authentication-service
      port: 8080
      weight: 1
    matches:
    - path:
        type: RegularExpression
        value: /_matrix/client/api/v1/login.*
    - path:
        type: RegularExpression
        value: /_matrix/client/api/v1/refresh.*
    - path:
        type: RegularExpression
        value: /_matrix/client/api/v1/logout.*
    - path:
        type: RegularExpression
        value: /_matrix/client/(r0|v3|unstable)/login.*
    - path:
        type: RegularExpression
        value: /_matrix/client/(r0|v3|unstable)/refresh.*
    - path:
        type: RegularExpression
        value: /_matrix/client/(r0|v3|unstable)/logout.*


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chat-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "chat.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: matrix-element-web
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: account-matrix-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "account-matrix.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: matrix-matrix-authentication-service
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /


# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: admin-matrix-cloud-buc-sh
# spec:
#   parentRefs:
#   - group: gateway.networking.k8s.io
#     kind: Gateway
#     name: external-gateway
#     namespace: external-gateway
#   hostnames:
#   - "admin-matrix.cloud.buc.sh"
#   rules:
#   - backendRefs:
#     - group: ""
#       kind: Service
#       name: matrix-element-admin
#       port: 8080
#       weight: 1
#     matches:
#     - path:
#         type: PathPrefix
#         value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rtc-matrix-cloud-buc-sh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
  hostnames:
  - "rtc-matrix.cloud.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: matrix-matrix-rtc-sfu
      port: 7880
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-authentication-service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-authentication-service
  policyTypes:
    - Ingress
    - Egress
  # Allow DNS Resolution
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  # public IP block
  - to:
    - ipBlock:
        cidr: 188.20.0.0/14
    ports:
    - protocol: TCP
      port: 443
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-rtc-authorization
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-rtc-authorisation-service
  policyTypes:
    - Ingress
    - Egress
  # Allow DNS Resolution
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-rtc-sfu
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-rtc-sfu
  policyTypes:
    - Ingress
    - Egress
  # Allow DNS Resolution
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: synapse
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: synapse-main
  policyTypes:
    - Ingress
    - Egress
  egress:
  # Allow DNS Resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

  # HomeAssistant (Frigate Preview)
  - to:
    - ipBlock:
        cidr: 10.0.0.24/32
    ports:
    - port: 8123
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.0.0.25/32
    ports:
    - port: 8971
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  # Allow access to matrix.org for push notifications
  - to:
    - ipBlock:
        cidr: 172.66.135.3/32
    - ipBlock:
        cidr: 172.66.139.239/32
    ports:
    - port: 443
  ingress:
  # Allow Ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
  
  # # Allow Access to the Internet, but block internal Access
  # - to:
  #   - ipBlock:
  #       cidr: "0.0.0.0/0"
  #       except:
  #       - 10.0.0.0/24
  #       - 10.0.100.0/24


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: element
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: element-web
  policyTypes:
    - Egress

---
# increase local Rate Limit for Synapse/element
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: matrix-cloud-buc-sh
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: chat-cloud--buc-sh
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 100000
          unit: Minute
